shuffler to springboot 3