@@ -1,7 +1,6 @@
-FROM openjdk:17-alpine
+FROM bellsoft/liberica-openjdk-alpine:17
 MAINTAINER https://github.com/QAcuma
 ARG JAR_FILE=build/libs/*.jar
 WORKDIR /opt/app
 COPY ${JAR_FILE} app.jar
-ENV JAVA_OPTS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
 ENTRYPOINT ["java","-jar","app.jar"]
